[gd_scene load_steps=20 format=3 uid="uid://cwnppb0i13jui"]

[ext_resource type="Script" path="res://enemy/scripts/monk.gd" id="1_8h3xo"]
[ext_resource type="Texture2D" uid="uid://djgocdrtsu4rc" path="res://assets/characters/Final monk level 1.png" id="2_57cty"]
[ext_resource type="Script" path="res://enemy/StateMachine/state_machine.gd" id="3_m4gc5"]
[ext_resource type="Script" path="res://enemy/scripts/enemy_wanderer.gd" id="4_1qoha"]
[ext_resource type="Script" path="res://enemy/scripts/enemy_chase.gd" id="5_quno4"]
[ext_resource type="PackedScene" uid="uid://d0seeddykde1t" path="res://char_components/scenes/health_component.tscn" id="6_blrfn"]
[ext_resource type="PackedScene" uid="uid://b21q77rjdvxm4" path="res://char_components/scenes/hitbox_component.tscn" id="7_qtd71"]
[ext_resource type="Texture2D" uid="uid://oshwtjxciwcs" path="res://assets/characters/Monk level 1 sprite 2.png" id="8_foggx"]
[ext_resource type="Texture2D" uid="uid://dvx2q8qjoksxb" path="res://enemy/assets/monk_death_1.png" id="8_qdgap"]
[ext_resource type="Texture2D" uid="uid://da7n1bf5hkmmn" path="res://enemy/assets/monk_death_2.png" id="9_1hlvg"]
[ext_resource type="Texture2D" uid="uid://8dohwdo1o522" path="res://enemy/assets/monk_death_3.png" id="10_xgd8f"]
[ext_resource type="Texture2D" uid="uid://dvk1ntny3hg34" path="res://enemy/assets/monk_death_4.png" id="11_0qir2"]
[ext_resource type="Texture2D" uid="uid://dctj3dbnqbtuo" path="res://enemy/assets/monk_death_5.png" id="12_6agep"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_meq7y"]
radius = 0.286641
height = 0.951147

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gb5n1"]
radius = 0.260556
height = 0.865382

[sub_resource type="Animation" id="Animation_34n4v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_57cty")]
}
tracks/1/type = "position_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite3D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 0, 0)

[sub_resource type="Animation" id="Animation_jnnlx"]
resource_name = "death"
length = 1.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.766667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("8_qdgap"), ExtResource("9_1hlvg"), ExtResource("10_xgd8f"), ExtResource("11_0qir2"), ExtResource("12_6agep")]
}
tracks/1/type = "position_3d"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("Sprite3D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1, 1, 0, -1, 0)

[sub_resource type="Animation" id="Animation_k4lvs"]
resource_name = "monk_chase"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("2_57cty"), ExtResource("8_foggx"), ExtResource("2_57cty")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5yn1g"]
_data = {
"RESET": SubResource("Animation_34n4v"),
"death": SubResource("Animation_jnnlx"),
"monk_chase": SubResource("Animation_k4lvs")
}

[node name="Monk" type="CharacterBody3D" groups=["Enemies Group"]]
transform = Transform3D(0.998603, 0, 0, 0, 0.998603, 0, 0, 0, 0.998603, 0, 0, 0)
collision_mask = 65
script = ExtResource("1_8h3xo")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-0.000384002, 0, -1.00002, 0, 1.00002, 0, 1.00002, 0, -0.000384002, 0.00424228, -0.00488292, -0.000590781)
shape = SubResource("CapsuleShape3D_meq7y")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(0.035, 0, 0, 0, 0.035, 0, 0, 0, 0.035, 0, 0, 0)
sorting_offset = 1.0
visibility_range_end = 20.0
shaded = true
texture = ExtResource("2_57cty")

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="."]
aabb = AABB(-0.570377, -0.556137, -0.565157, 1.14075, 1.11227, 1.13031)

[node name="health_timer" type="Timer" parent="."]
wait_time = 0.1

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("InitialState")]
script = ExtResource("3_m4gc5")
InitialState = NodePath("EnemyWander")

[node name="EnemyWander" type="Node" parent="StateMachine"]
script = ExtResource("4_1qoha")

[node name="EnemyChase" type="Node" parent="StateMachine"]
script = ExtResource("5_quno4")

[node name="HealthComponent" parent="." instance=ExtResource("6_blrfn")]
MAX_HEALTH = 20.0

[node name="HitboxComponent" parent="." instance=ExtResource("7_qtd71")]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, 0, 0)
collision_layer = 4
collision_mask = 2

[node name="Hitbox" type="CollisionShape3D" parent="HitboxComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00183107, -0.0032959, -0.00120593)
shape = SubResource("CapsuleShape3D_gb5n1")

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.6

[node name="chase_animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5yn1g")
}

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 2.6416, 0, 0.165841, 0)
target_position = Vector3(0, 0, 1)

[connection signal="timeout" from="health_timer" to="." method="_on_health_timer_timeout"]
[connection signal="monk_die" from="HealthComponent" to="." method="_on_health_component_monk_die"]
