[gd_scene load_steps=21 format=3 uid="uid://m0j8m41dr240"]

[ext_resource type="Script" path="res://enemy/scripts/nun.gd" id="1_44yvt"]
[ext_resource type="Texture2D" uid="uid://ckewadguma4sp" path="res://assets/characters/final nun level 1 (sprite 1).png" id="2_nw232"]
[ext_resource type="Script" path="res://enemy/StateMachine/state_machine.gd" id="3_72md4"]
[ext_resource type="Script" path="res://enemy/scripts/enemy_wanderer.gd" id="4_w5gn1"]
[ext_resource type="PackedScene" uid="uid://d0seeddykde1t" path="res://char_components/scenes/health_component.tscn" id="5_hb7i3"]
[ext_resource type="PackedScene" uid="uid://b21q77rjdvxm4" path="res://char_components/scenes/hitbox_component.tscn" id="6_6nqag"]
[ext_resource type="Script" path="res://enemy/scripts/enemy_shoot.gd" id="6_bmqaf"]
[ext_resource type="Texture2D" uid="uid://dlgqa6pdjt557" path="res://assets/characters/Final nun level 1 (sprite 2).png" id="8_orfb7"]
[ext_resource type="Texture2D" uid="uid://ceoxnsms6v4af" path="res://enemy/assets/Nun death sprite 1.png" id="9_on4n4"]
[ext_resource type="WwiseEvent" uid="uid://b4ihtuth4p6p6" path="res://Wwise/resources/Event/{FDF3872D-2BE8-481D-AAC6-F822C2935383}.tres" id="9_pt4vu"]
[ext_resource type="Texture2D" uid="uid://rdjxbq43ffrx" path="res://enemy/assets/Nun death sprite 2.png" id="10_kc4h2"]
[ext_resource type="Texture2D" uid="uid://cni6lq82doq42" path="res://enemy/assets/Nun death sprite 3.png" id="11_0ll8l"]
[ext_resource type="Texture2D" uid="uid://d3783xk52vih3" path="res://enemy/assets/Nun death sprite 4.png" id="12_8xgqw"]
[ext_resource type="Texture2D" uid="uid://mmlxeqb423sx" path="res://enemy/assets/Nun death sprite 5.png" id="13_nc74a"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_jqxgs"]
radius = 0.244186
height = 1.17406

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_f4ck6"]
radius = 0.247158
height = 1.17665

[sub_resource type="Animation" id="Animation_7pbd6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_nw232")]
}
tracks/1/type = "position_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite3D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 0, 0)

[sub_resource type="Animation" id="Animation_h8bdi"]
resource_name = "death"
length = 1.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("9_on4n4"), ExtResource("10_kc4h2"), ExtResource("11_0ll8l"), ExtResource("12_8xgqw"), ExtResource("13_nc74a")]
}
tracks/1/type = "position_3d"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("Sprite3D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 0, 0, 0.99, 1, 0, 0, 0, 1, 1, 0, -0.5, 0)

[sub_resource type="Animation" id="Animation_rd5b5"]
resource_name = "knife"
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("2_nw232"), ExtResource("8_orfb7"), ExtResource("2_nw232")]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"knife_effect_sound"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5e4lk"]
_data = {
"RESET": SubResource("Animation_7pbd6"),
"death": SubResource("Animation_h8bdi"),
"knife": SubResource("Animation_rd5b5")
}

[node name="Nun" type="CharacterBody3D" groups=["Enemies Group"]]
transform = Transform3D(0.998603, 0, 0, 0, 0.998603, 0, 0, 0, 0.998603, 0, 0, 0)
collision_mask = 65
script = ExtResource("1_44yvt")
is_ranged = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-0.00151851, 4.45302e-08, -1.00002, 1.65333e-06, 1.00002, 4.20022e-08, 1.00002, -1.65326e-06, -0.00151851, 0.0133279, 4.19748e-08, 1.48866e-05)
shape = SubResource("CapsuleShape3D_jqxgs")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(0.04, 0, 0, 0, 0.04, 0, 0, 0, 0.04, 0, 0, 0)
sorting_offset = 1.0
visibility_range_end = 20.0
shaded = true
texture = ExtResource("2_nw232")

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="."]
aabb = AABB(-0.570377, -0.556137, -0.565157, 1.14075, 1.11227, 1.13031)

[node name="health_timer" type="Timer" parent="."]
wait_time = 0.1

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("InitialState")]
script = ExtResource("3_72md4")
InitialState = NodePath("EnemyWander")

[node name="EnemyWander" type="Node" parent="StateMachine"]
script = ExtResource("4_w5gn1")

[node name="EnemyShoot" type="Node" parent="StateMachine"]
script = ExtResource("6_bmqaf")

[node name="HealthComponent" parent="." instance=ExtResource("5_hb7i3")]
MAX_HEALTH = 20.0

[node name="HitboxComponent" parent="." instance=ExtResource("6_6nqag")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00330349, 0, 0.000237081)
collision_layer = 4
collision_mask = 2

[node name="Hitbox" type="CollisionShape3D" parent="HitboxComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0150761, 0, -0.00219482)
shape = SubResource("CapsuleShape3D_f4ck6")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 2.41399, 0, 0.273301, 0)
target_position = Vector3(0, 0, 1)
collision_mask = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5e4lk")
}

[node name="AkEvent3D" type="AkEvent3D" parent="."]
event = ExtResource("9_pt4vu")
is_environment_aware = true

[node name="AkListener3D" type="AkListener3D" parent="."]
is_spatial = true

[connection signal="timeout" from="health_timer" to="." method="_on_health_timer_timeout"]
[connection signal="nun_die" from="HealthComponent" to="." method="_on_health_component_nun_die"]
[connection signal="area_entered" from="HitboxComponent" to="." method="_on_hitbox_component_area_entered"]
